# apidrift

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: ai_generated.py
src/apidrift/: __init__.py  __main__.py  cache.py  checks.py  cli.py  introspect.py  report.py  resolver.py  worker.py
tests/: conftest.py  test_benchmark.py  test_cache.py  test_checks.py  test_cli.py  test_report.py  test_resolver.py  test_worker.py
tests/fixtures/: legacy_lib.py
