[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apidrift"
version = "0.0.1"
description = "CI guard that flags API calls missing from the dependency version actually installed."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Richik Mandal", email = "richikmandal18@gmail.com" }]
keywords = ["linter", "ci", "ast", "api", "version-drift", "llm", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[project.scripts]
apidrift = "apidrift.cli:main"

[project.urls]
Homepage = "https://github.com/richikmandal/apidrift"
Repository = "https://github.com/richikmandal/apidrift"

[tool.hatch.build.targets.wheel]
packages = ["src/apidrift"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
